--- a/index.html
+++ b/index.html
@@ -120,13 +120,13 @@
                     </div>
                     <div class="carousel-inner h-100">
                         <div class="carousel-item active h-100 bg-success">
-                            <img style="filter: brightness(40%);" src="img/Angkor.webp" class="d-block w-100 h-100 object-fit-cover" alt="">
+                            <img style="filter: brightness(40%);" src="image/Angkor.webp" class="d-block w-100 h-100 object-fit-cover" alt="">
                         </div> h-100
                         <div class="carousel-item active h-100 bg-warning">
-                            <img style="filter: brightness(40%);" src="img/sea.jpg" class="d-block w-100  h-100 object-fit-cover" alt="">
+                            <img style="filter: brightness(40%);" src="image/sea.jpg" class="d-block w-100  h-100 object-fit-cover" alt="">
                         </div>
                         <div class="carousel-item active h-100 bg-primary">
-                            <img style="filter: brightness(40%);" src="img/Think-Cambodia-PhnomPenh.jpg" class="d-block w-100  h-100 object-fit-cover" alt="">
+                            <img style="filter: brightness(40%);" src="image/Think-Cambodia-PhnomPenh.jpg" class="d-block w-100  h-100 object-fit-cover" alt="">
                         </div>
                     </div>
                 </div>
@@ -148,7 +148,7 @@
                         <div class="col-12 col-md-6 col-lg-4 p-3 " data-aos="zoom-in" data-aos-delay="100">
                             <div class="card position-relative overflow-hidden transition border-0 hover-card mt-lg-5">
                                 <div class="image-card">
-                                    <img class="w-100 h-100 object-fit-cover brightness" src="img/sea.jpg" alt="">
+                                    <img class="w-100 h-100 object-fit-cover brightness" src="image/sea.jpg" alt="">
                                 </div>
                                 <div class="text-center position-absolute start-50 bottom-0 translate-middle-x w-100">
                                      <span​​ class="text-light siemreap-font">ដំណើរកម្សាន្តទៅ</span​​>
@@ -159,7 +159,7 @@
                         <div class="col-12 col-md-6 col-lg-4 p-3" data-aos="zoom-in" data-aos-delay="200">
                             <div class="card position-relative overflow-hidden transition border-0 hover-card mt-lg-3">
                                 <div class="image-card">
-                                    <img class="w-100 h-100 object-fit-cover brightness" src="img/water.jpg" alt="">
+                                    <img class="w-100 h-100 object-fit-cover brightness" src="image/water.jpg" alt="">
                                 </div>
                                 <div class="text-center position-absolute start-50 bottom-0 translate-middle-x w-100">
                                      <span​​ class="text-light siemreap-font">ដំណើរកម្សាន្តទៅ</span​​>
@@ -170,7 +170,7 @@
                         <div class="col-12 col-md-6 col-lg-4 p-3" data-aos="zoom-in" data-aos-delay="300">
                             <div class="card position-relative overflow-hidden transition border-0 hover-card mt-lg-5">
                                 <div class="image-card">
-                                    <img class="w-100 h-100 object-fit-cover brightness" src="img/Siem-Reap-Temples.jpg" alt="">
+                                    <img class="w-100 h-100 object-fit-cover brightness" src="image/Siem-Reap-Temples.jpg" alt="">
                                 </div>
                                 <div class="text-center position-absolute start-50 bottom-0 translate-middle-x w-100">
                                      <span​​ class="text-light siemreap-font">ដំណើរកម្សាន្តទៅ</span​​>
@@ -192,7 +192,7 @@
                             <div class="col-md-6 col-lg-4 my-2" data-aos="zoom-in" data-aos-delay="100">
                                 <div class="d-flex px-4 border rounded-2 border-secondary-subtle py-4 bg-light-subtle-subtle">
                                     <div class="col-4 px-3 p-3 bg-danger-subtle rounded-5 d-grid align-content-center">
-                                        <img src="img/trip1.png" class="w-100 object-fit-cover" alt="">
+                                        <img src="image/trip1.png" class="w-100 object-fit-cover" alt="">
 
                                     </div>
                                     <div class="col-8 px-3"> 
@@ -204,7 +204,7 @@
                             <div class="col-md-6 col-lg-4 my-2" data-aos="zoom-in" data-aos-delay="200">
                                 <div class="d-flex px-4 border rounded-2 border-secondary-subtle py-4 bg-light-subtle-subtle">
                                     <div class="col-4 px-3 p-3 bg-primary-subtle rounded-5 d-grid align-content-center">
-                                        <img src="img/trip2.png" class="w-100  object-fit-cover" alt="Trip2">
+                                        <img src="image/trip2.png" class="w-100  object-fit-cover" alt="Trip2">
 
                                     </div>
                                     <div class="col-8 px-3"> 
@@ -216,7 +216,7 @@
                             <div class="col-md-6 col-lg-4 my-2" data-aos="zoom-in" data-aos-delay="300">
                                 <div class="d-flex px-4 border rounded-2 border-secondary-subtle py-4 bg-light-subtle-subtle">
                                     <div class="col-4 px-3 p-3 bg-secondary-subtle rounded-5 d-grid align-content-center">
-                                        <img src="img/trip3.png" class="w-100  object-fit-cover" alt="">
+                                        <img src="image/trip3.png" class="w-100  object-fit-cover" alt="">
 
                                     </div>
                                     <div class="col-8 px-3"> 
@@ -228,7 +228,7 @@
                             <div class="col-md-6 col-lg-4 my-2" data-aos="zoom-in" data-aos-delay="400">
                                 <div class="d-flex px-4 border rounded-2 border-secondary-subtle py-4 bg-light-subtle-subtle">
                                     <div class="col-4 px-3 p-3 bg-success-subtle rounded-5 d-grid align-content-center">
-                                        <img src="img/trip4.png" class="w-100 object-fit-cover" alt="">
+                                        <img src="image/trip4.png" class="w-100 object-fit-cover" alt="">
 
                                     </div>
                                     <div class="col-8 px-3"> 
@@ -240,7 +240,7 @@
                             <div class="col-md-6 col-lg-4 my-2" data-aos="zoom-in" data-aos-delay="500">
                                 <div class="d-flex px-4 border rounded-2 border-secondary-subtle py-4 bg-light-subtle-subtle">
                                     <div class="col-4 px-3 p-3 bg-primary-subtle rounded-5 d-grid align-content-center">
-                                        <img src="img/trip5.png" class="w-100 object-fit-cover" alt="">
+                                        <img src="image/trip5.png" class="w-100 object-fit-cover" alt="">
 
                                     </div>
                                     <div class="col-8 px-3"> 
@@ -252,7 +252,7 @@
                             <div class="col-md-6 col-lg-4 my-2" data-aos="zoom-in" data-aos-delay="600">
                                 <div class="d-flex px-4 border rounded-2 border-secondary-subtle py-4 bg-light-subtle-subtle">
                                     <div class="col-4 px-3 p-3 bg-danger-subtle rounded-5 d-grid align-content-center">
-                                        <img src="img/trip6.png" class="w-100 object-fit-cover" alt="">
+                                        <img src="image/trip6.png" class="w-100 object-fit-cover" alt="">
 
                                     </div>
                                     <div class="col-8 px-3"> 
@@ -275,7 +275,7 @@
                 
                     <div class="container p-0 mt-lg-5">
                         <div class="d-flex align-items-center mb-4 p-2"  data-aos="zoom-in-right">
-                            <img src="img/destination.png" alt="" width="50px">
+                            <img src="image/destination.png" alt="" width="50px">
                             <h1 class="moul-font  ms-2 m-0 text-light">
                                 កន្លែងកម្សាន្តក្នុងស្រុក
                             </h1>
@@ -284,7 +284,7 @@
                             <div class="col-md-6 col-lg-4 my-3" data-aos="fade-up" data-aos-delay="100">
                                 <div class="card p-3 siemreap-font">
                                     <div class="image bg-secondary rounded-2 position-relative overflow-hidden">
-                                        <img src="img/card1.jpg" alt="" class="w-100 h-100 object-fit-cover">
+                                        <img src="image/card1.jpg" alt="" class="w-100 h-100 object-fit-cover">
                                         <div class="category bg-success position-absolute top-0 py-1">
                                             <span class="px-3 text-light">ល្បីល្បាញ</span>
                                         </div>
@@ -323,7 +323,7 @@
                             <div class="col-md-6 col-lg-4 my-3" data-aos="fade-up" data-aos-delay="100">
                                 <div class="card p-3 siemreap-font">
                                     <div class="image bg-secondary rounded-2 position-relative overflow-hidden">
-                                        <img src="img/card2.webp" alt="" class="w-100 h-100 object-fit-cover">
+                                        <img src="image/card2.webp" alt="" class="w-100 h-100 object-fit-cover">
                                         <div class="category bg-success position-absolute top-0 py-1">
                                             <span class="px-3 text-light">ល្បីល្បាញ</span>
                                         </div>
@@ -363,7 +363,7 @@
                             <div class="col-md-6 col-lg-4 my-3" data-aos="fade-up" data-aos-delay="100">
                                 <div class="card p-3 siemreap-font">
                                     <div class="image bg-secondary rounded-2 position-relative overflow-hidden">
-                                        <img src="img/card3.jpg" alt="" class="w-100 h-100 object-fit-cover">
+                                        <img src="image/card3.jpg" alt="" class="w-100 h-100 object-fit-cover">
                                         <div class="category bg-success position-absolute top-0 py-1">
                                             <span class="px-3 text-light">ល្បីល្បាញ</span>
                                         </div>
@@ -402,7 +402,7 @@
                             <div class="col-md-6 col-lg-4 my-3" data-aos="fade-up" data-aos-delay="100">
                                 <div class="card p-3 siemreap-font">
                                     <div class="image bg-secondary rounded-2 position-relative overflow-hidden">
-                                        <img src="img/sea.jpg" alt="" class="w-100 h-100 object-fit-cover">
+                                        <img src="image/sea.jpg" alt="" class="w-100 h-100 object-fit-cover">
                                         <div class="category bg-success position-absolute top-0 py-1">
                                             <span class="px-3 text-light">ល្បីល្បាញ</span>
                                         </div>
@@ -441,7 +441,7 @@
                             <div class="col-md-6 col-lg-4 my-3" data-aos="fade-up" data-aos-delay="100">
                                 <div class="card p-3 siemreap-font">
                                     <div class="image bg-secondary rounded-2 position-relative overflow-hidden">
-                                        <img src="img/card7.jpg" alt="" class="w-100 h-100 object-fit-cover">
+                                        <img src="image/card7.jpg" alt="" class="w-100 h-100 object-fit-cover">
                                         <div class="category bg-success position-absolute top-0 py-1">
                                             <span class="px-3 text-light">ល្បីល្បាញ</span>
                                         </div>
@@ -480,7 +480,7 @@
                             <div class="col-md-6 col-lg-4 my-3" data-aos="fade-up" data-aos-delay="100">
                                 <div class="card p-3 siemreap-font">
                                     <div class="image bg-secondary rounded-2 position-relative overflow-hidden">
-                                        <img src="img/card6.jfif" alt="" class="w-100 h-100 object-fit-cover">
+                                        <img src="image/card6.jfif" alt="" class="w-100 h-100 object-fit-cover">
                                         <div class="category bg-success position-absolute top-0 py-1">
                                             <span class="px-3 text-light">ល្បីល្បាញ</span>
                                         </div>
@@ -589,7 +589,7 @@
                                 <h4 class="text-light mb-1 mt-1">ពួកយើងនៅទី​នេះ</h4>
                                 <p class="text-secondary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, quod.</p>
                                 <h4 class="text-light mb-2 mt-1">Payment-Partner</h4>
-                                <img src="img/pic-footer.png" alt="" width="240px">   
+                                <img src="image/pic-footer.png" alt="" width="240px">   
                             </div>
                         </div>
                     </div>
