--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
                             <div class="col-md-6 col-lg-4 my-3" data-aos="fade-up" data-aos-delay="100">
                                 <div class="card p-3 siemreap-font">
                                     <div class="image bg-secondary rounded-2 position-relative overflow-hidden">
-                                        <img src="image/card1.JPG" alt="" class="w-100 h-100 object-fit-cover">
+                                        <img src="images/card1.jpg" alt="" class="w-100 h-100 object-fit-cover">
                                         <div class="category bg-success position-absolute top-0 py-1">
                                             <span class="px-3 text-light">ល្បីល្បាញ</span>
                                         </div>
@@ -323,7 +323,7 @@
                             <div class="col-md-6 col-lg-4 my-3" data-aos="fade-up" data-aos-delay="100">
                                 <div class="card p-3 siemreap-font">
                                     <div class="image bg-secondary rounded-2 position-relative overflow-hidden">
-                                        <img src="image/card2.webp" alt="" class="w-100 h-100 object-fit-cover">
+                                        <img src="images/card2.webp" alt="" class="w-100 h-100 object-fit-cover">
                                         <div class="category bg-success position-absolute top-0 py-1">
                                             <span class="px-3 text-light">ល្បីល្បាញ</span>
                                         </div>
@@ -363,7 +363,7 @@
                             <div class="col-md-6 col-lg-4 my-3" data-aos="fade-up" data-aos-delay="100">
                                 <div class="card p-3 siemreap-font">
                                     <div class="image bg-secondary rounded-2 position-relative overflow-hidden">
-                                        <img src="./image/card3.JPG" alt="" class="w-100 h-100 object-fit-cover">
+                                        <img src="image/card3.jpg" alt="" class="w-100 h-100 object-fit-cover">
                                         <div class="category bg-success position-absolute top-0 py-1">
                                             <span class="px-3 text-light">ល្បីល្បាញ</span>
                                         </div>
@@ -402,7 +402,7 @@
                             <div class="col-md-6 col-lg-4 my-3" data-aos="fade-up" data-aos-delay="100">
                                 <div class="card p-3 siemreap-font">
                                     <div class="image bg-secondary rounded-2 position-relative overflow-hidden">
-                                        <img src="/image/sea.JPG" alt="" class="w-100 h-100 object-fit-cover">
+                                        <img src="image/sea.jpg" alt="" class="w-100 h-100 object-fit-cover">
                                         <div class="category bg-success position-absolute top-0 py-1">
                                             <span class="px-3 text-light">ល្បីល្បាញ</span>
                                         </div>
@@ -441,7 +441,7 @@
                             <div class="col-md-6 col-lg-4 my-3" data-aos="fade-up" data-aos-delay="100">
                                 <div class="card p-3 siemreap-font">
                                     <div class="image bg-secondary rounded-2 position-relative overflow-hidden">
-                                        <img src="./image/card7.jpg" alt="" class="w-100 h-100 object-fit-cover">
+                                        <img src="image/card7.jpg" alt="" class="w-100 h-100 object-fit-cover">
                                         <div class="category bg-success position-absolute top-0 py-1">
                                             <span class="px-3 text-light">ល្បីល្បាញ</span>
                                         </div>
@@ -480,7 +480,7 @@
                             <div class="col-md-6 col-lg-4 my-3" data-aos="fade-up" data-aos-delay="100">
                                 <div class="card p-3 siemreap-font">
                                     <div class="image bg-secondary rounded-2 position-relative overflow-hidden">
-                                        <img src="/image/card6.jfif" alt="" class="w-100 h-100 object-fit-cover">
+                                        <img src="image/card6.jfif" alt="" class="w-100 h-100 object-fit-cover">
                                         <div class="category bg-success position-absolute top-0 py-1">
                                             <span class="px-3 text-light">ល្បីល្បាញ</span>
                                         </div>
